Adding conversations preliminary addition
Adding conversations now works on a single-instance basis.

--- a/res/layout/activity_hub.xml
+++ b/res/layout/activity_hub.xml
@@ -21,6 +21,7 @@
             android:layout_weight="1"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:onClick="addConversationButton"
             android:text="@string/addConversation" />
 
         <Button
@@ -29,6 +30,7 @@
             android:layout_weight="1"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:onClick="editConversationsButton"
             android:text="@string/editConversations" />
 
     </LinearLayout>
