Popup menus to remove clutter
Hub and Conversation now have buttons to open menus rather than a
cluttered menu bar. Password set/remove buttons currently do nothing.

--- a/res/layout/activity_hub.xml
+++ b/res/layout/activity_hub.xml
@@ -25,13 +25,13 @@
             android:text="@string/addConversation" />
 
         <Button
-            android:id="@+id/setLocalNumber"
+            android:id="@+id/hubSettings"
             style="?android:attr/buttonBarButtonStyle"
             android:layout_weight="1"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:onClick="setLocalNumberButtonClick"
-            android:text="@string/setLocalNumber" />
+            android:onClick="hubSettingsButtonClick"
+            android:text="@string/settings" />
 
     </LinearLayout>
 
